Added migration, Create message API, updated docs, added additional condition for groups
