# internal/model/response/error.go
@@ -1,6 +1,12 @@
 package response
 
 type Error struct {
-	Code    int    `json:"code"`
+	Code    int               `json:"code"`
+	Message string            `json:"message"`
+	Errors  []ValidationError `json:"errors"`
+}
+
+type ValidationError struct {
+	Field   string `json:"field"`
 	Message string `json:"message"`
 }
